fix(styles): use align-content to center card and attribution. Thanks @elaineleung

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   background-color: var(--very-dark-blue);
   color: var(--white);
   display: grid;
-  align-items: center;
+  align-content: center;
 }
 
 .stats-preview-card {
@@ -97,6 +97,7 @@ body {
 }
 
 .attribution {
+  margin-top: 30px;
   font-size: 0.75rem;
   text-align: center;
 }
